added handling framework, deleted spring security part

--- a/docker-deploy/ups/build.gradle
+++ b/docker-deploy/ups/build.gradle
@@ -20,7 +20,7 @@ dependencies {
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'com.google.protobuf:protobuf-java:3.19.6'
-	implementation 'org.springframework.boot:spring-boot-starter-security'
+//	implementation 'org.springframework.boot:spring-boot-starter-security'
 }
 
 tasks.named('test') {
