--- a/docker-deploy/docker-compose.yml
+++ b/docker-deploy/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     container_name: project
     build: ./ups
     image: project:latest
+    command: ["sh", "-c", "sleep 3 && java -jar ups-0.0.1-SNAPSHOT.jar worldServerHostOrIP"]
     volumes:
       - ./ups/build/libs:/app
     ports:
