--- a/docker-deploy/ups/Dockerfile
+++ b/docker-deploy/ups/Dockerfile
@@ -5,4 +5,4 @@ WORKDIR /app
 
 #COPY ./build/libs/ups-0.0.1-SNAPSHOT.jar .
 
-ENTRYPOINT ["sh", "-c", "sleep 3 && java -jar ups-0.0.1-SNAPSHOT.jar"]
+#ENTRYPOINT ["sh", "-c", "sleep 3 && java -jar ups-0.0.1-SNAPSHOT.jar"]
